# staged-test-utility

./: .env.example  .env.mock  .gitmodules  AGENTS.md  Jenkinsfile  README.md  docker-compose.mock.yml  main.py  pyproject.toml
.github/agents/: expert-python-feature-developer.agent.md  tpms-bottleneck-remediator.agent.md  tpms-feature-developer.agent.md  tpms-good-enough-review.agent.md
docs/: ARCHITECTURE.md  BOTTLENECK_REMEDIATION_SUGGESTIONS.md  CODE_REVIEW_SUGGESTIONS.md  IMPLEMENTATION_NOTES.md
docs/performance/: BASELINE.md  performance-improvement-report.css  performance-improvement-report.html  performance-improvement-report.xml
output/perf/: master_stage_latency_baseline.json  stage_latency.json  stage_latency_after_remediation_1_2.json  stage_latency_after_remediation_1_2_rerun.json  stage_latency_after_remediation_1_2_rerun2.json  stage_latency_rerun.json  stage_latency_with_startup_metric.json  startup_timing_before_after.json
tests/: test_cycle_controller.py  test_default_cycle.py  test_dlt_actions.py  test_dlt_service.py  test_main_window_events.py  test_profiles.py  test_swut_actions.py
tools/mock_env/: dlt_mock_server.py  ssh_mock_server.py  swut_mock_server.py
tools/perf/: run_stage_latency.py
tpms_utility/: __init__.py  config.py  cycle_controller.py  dlt_actions.py  models.py  swut_actions.py
tpms_utility/services/: __init__.py  audio_service.py  dlt_protocol.py  dlt_service.py  log_exporter.py  swut_demo.py  swut_service.py
tpms_utility/stages/: __init__.py  default_cycle.json  default_cycle.py  example_minimal_cycle.json  profiles.py
(+3 files in other folders)
