[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tpms-test-utility"
version = "0.1.0"
description = "TPMS test cycle utility prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"swut>=8.2.2",
	"paramiko>=3.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tpms_utility*"]
